More speeding up

--- a/_posts/2017-02-21-speeding-up-algorithms-with-sse.html
+++ b/_posts/2017-02-21-speeding-up-algorithms-with-sse.html
@@ -109,14 +109,14 @@ Index-based: 0.00674200 (0.99999827)
 <p>There are two SSE operation types: <b>scalar</b> and <b>packed</b>. Scalar operations use only the lowest elements of vectors. Packed operations deal with each element of vectors given. Look at the images below and you shall see the difference:</p>
 
 <div>
-    <img src="{{ '/tumblr_files/speeding_up_with_sse/tumblr_inline_nqhky64nQB1qh5oee_500.png' | prepend: site.baseurl }}"/>
+    <img data-src="{{ '/tumblr_files/speeding_up_with_sse/tumblr_inline_nqhky64nQB1qh5oee_500.png' | prepend: site.baseurl }}"/>
 </div>
 <div>
-<img src="{{ '/tumblr_files/speeding_up_with_sse/tumblr_inline_nqhkyq0E511qh5oee_500.png' | prepend: site.baseurl }}"/>
+    <img data-src="{{ '/tumblr_files/speeding_up_with_sse/tumblr_inline_nqhkyq0E511qh5oee_500.png' | prepend: site.baseurl }}"/>
 </div>
 <p>Horizontal operations deal on vectors in a different direction. Well, you know… The horizontal one…</p>
 <div>
-<img src="{{ '/tumblr_files/speeding_up_with_sse/tumblr_inline_nqhkz4bm1K1qh5oee_400.png' | prepend: site.baseurl }}"/>
+    <img data-src="{{ '/tumblr_files/speeding_up_with_sse/tumblr_inline_nqhkz4bm1K1qh5oee_400.png' | prepend: site.baseurl }}"/>
 </div>
 
 <p>Operations may deal with <b>single-</b> or <b>double-precision</b> elements (<code>float</code> and <code>double</code> types, correspondingly).
