Layouts and about page enhancements

--- a/about.html
+++ b/about.html
@@ -56,12 +56,12 @@ permalink: /about/
 
 <div class="vspace"></div>
 
-<div class="row m-y">
-  <div class="col-xs-12 col-md-4 text-center m-y">
+<div class="flex-row">
+  <div class="flex-col">
     <img src="{{ '/images/photo-large-compressed.jpg' | prepend:site.baseurl }}" alt="photo-large" class="photo-large">
   </div>
 
-  <div class="col-xs-12 col-md-8">
+  <div class="flex-col">
     <p>
       Hello! My name is Artem and I like blogging!
     </p>
@@ -79,10 +79,11 @@ permalink: /about/
   </div>
 </div>
 
-<div class="row">
+<!--<div class="row">
   <div class="col-xs-12">
-    <!--<li class="media">
+    <li class="media">
       (.media-left>img.media-object)+(.media-body>h4.media-heading+p)
-    </li>-->
+    </li>
   </div>
 </div>
+-->
