--- a/about.html
+++ b/about.html
@@ -79,6 +79,17 @@ permalink: /about/
   </div>
 </div>
 
+<div class="vspace"></div>
+
+<div class="flex-col">
+  <p>These are the places I've been to:</p>
+
+  <div id="map"></div>
+</div>
+
+<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script>
+<script src="{{ '/js/about.js' | prepend:site.baseurl }}"></script>
+
 <!--<div class="row">
   <div class="col-xs-12">
     <li class="media">
