Added video/images to intellij productivity article and fixed grammar

--- a/about.html
+++ b/about.html
@@ -68,8 +68,8 @@ permalink: /about/
 
     <p>
       There are many things you may find on this blog. They are mostly about programming, but
-      that is not the only thing I am interested in. I love travelling, riding bicycles,
-      creating 3D models, shooting photos. I am learning to ride snowboard, to play the guitar,
+      that is not the only thing I am interested in. I love traveling, riding bicycles,
+      creating 3D models, shooting photos. I am learning to ride a snowboard, to play the guitar,
       making some stuff with soldering and MCUs. And I love my girlfriend =)
     </p>
 
