Added some drafts

--- a/_drafts/2014-06-24-memory-management-in-two-minutes.html
+++ b/_drafts/2014-06-24-memory-management-in-two-minutes.html
@@ -13,4 +13,4 @@ tumblr_url: http://shybovycha.tumblr.com/post/89792640191/memory-management-in-t
 
 <p>Thus, if you&rsquo;ve allocated memory - you <strong>MUST</strong> clean it up. Created an object - destroy it when it&rsquo;s no longer in need. Filled the database - clean it up lately, when the information stored is useless.</p>
 
-<hr><p><em>Many thanks for the idea to my teamlead, Marat Kamenshchikov!</em></p>
+<hr><p><em>Many thanks for the idea to my former teamlead, Marat Kamenshchikov!</em></p>
