--- a/about.html
+++ b/about.html
@@ -4,58 +4,6 @@ title: About
 permalink: /about/
 ---
 
-<div class="row">
-  <div class="col-xs-12">
-    <div class="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample1-compressed.jpg'|prepend:site.baseurl}}" alt="">
-
-          <div class="carousel-caption">Pieniny, Poland</div>
-        </div>
-
-        <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample2-compressed.jpg'|prepend:site.baseurl}}" alt="">
-
-          <div class="carousel-caption">Prague, Czech Republic</div>
-        </div>
-
-        <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample3-compressed.jpg'|prepend:site.baseurl}}" alt="">
-
-          <div class="carousel-caption">Vienn, Austria</div>
-        </div>
-
-        <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample4-compressed.jpg'|prepend:site.baseurl}}" alt="">
-
-          <div class="carousel-caption">Cabo da Roca, Portugal</div>
-        </div>
-
-        <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample6-compressed.jpg'|prepend:site.baseurl}}" alt="">
-
-          <div class="carousel-caption">Oko Morskie, Poland</div>
-        </div>
-
-        <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample7-compressed.jpg'|prepend:site.baseurl}}" alt="">
-
-          <div class="carousel-caption">Park Ojcowski, Poland</div>
-        </div>
-
-        <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample8-compressed.jpg'|prepend:site.baseurl}}" alt="">
-
-          <div class="carousel-caption">Gdańsk, Poland</div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="vspace"></div>
-
 <div class="flex-row">
   <div class="flex-col">
     <img src="{{ '/images/photo-large-compressed.jpg' | prepend:site.baseurl }}" alt="photo-large" class="photo-large">
@@ -63,38 +11,163 @@ permalink: /about/
 
   <div class="flex-col">
     <p>
-      Hello! My name is Artem and I like blogging!
+      Hello! My name is Artem, and this is my blog!
     </p>
 
     <p>
-      There are many things you may find on this blog. They are mostly about programming, but
-      that is not the only thing I am interested in. I love traveling, riding bicycles,
-      creating 3D models, shooting photos. I am learning to ride a snowboard, to play the guitar,
-      making some stuff with soldering and MCUs. And I love my girlfriend =)
+      There are many things you may find here. They are mostly about programming, but
+      that is just one of many things I'm interested in. I love travelling, riding bicycle,
+      creating 3D models, shooting photos, playing board games. I am learning to play a guitar,
+      making some electronic stuff.
     </p>
 
     <p>
-      Some of those come to me easily, some of them <em>(like playing the guitar or riding snowboard)</em> - not.
+      Some of those come to me easily, some of them <em>(like playing the guitar or snowboarding)</em> - not.
+    </p>
+
+    <p>
+      You can find me on <a href="https://twitter.com/shybovycha">Twitter</a>,
+      <a href="https://github.com/shybovycha">GitHub</a>, 
+      <a href="https://stackoverflow.com/users/330471/shybovycha">StackOverflow</a> and 
+      <a href="https://www.linkedin.com/in/shybovycha/">LinkedIn</a>.
     </p>
   </div>
 </div>
 
 <div class="vspace"></div>
 
-<div class="flex-col">
-  <p>These are the places I've been to:</p>
-
-  <div id="map"></div>
+<div class="flex-row">
+  Here are some of my photos:
 </div>
 
-<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script>
-<script src="{{ '/js/about.js' | prepend:site.baseurl }}"></script>
-
-<!--<div class="row">
+<div class="row">
   <div class="col-xs-12">
-    <li class="media">
-      (.media-left>img.media-object)+(.media-body>h4.media-heading+p)
-    </li>
+    <div class="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/kovacova.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Kováčová, Slovakia</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/stockholm.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Stockholm, Sweden</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/vienn.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Vienn, Austria</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/cabo_da_roca.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Cabo da Roca, Portugal</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/oko_morskie.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Oko Morskie, Poland</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/azure_window.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Azure Window, Malta</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/gdansk.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Gdańsk, Poland</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/paris.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Paris, France</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/pisa.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Pisa, Italy</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/budapest.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Budapest, Hungary</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/troll_tunga.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Troll Tunga, Norway</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/rome.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Rome, Italy</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/venice.jpg'|prepend:site.baseurl}}" alt="">
+        
+          <div class="carousel-caption">Venice, Italy</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/gran_canaria.jpg'|prepend:site.baseurl}}" alt="">
+        
+          <div class="carousel-caption">Gran Canaria, Spain</div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="{{'/images/photo-samples/sydney.jpg'|prepend:site.baseurl}}" alt="">
+
+          <div class="carousel-caption">Sydney, Australia</div>
+        </div>
+
+        <div class="carousel-item">
+          <a href="https://500px.com/photo/239667127/sakura-blossom-by-moo-foo">
+            <img src="https://drscdn.500px.org/photo/239667127/m%3D900/v2?user_id=19167395&webp=true&sig=8020288a9724e651dadba355482f8a8eb34c41d35427c034e6524e4afaa78275">
+          </a>
+
+          <div class="carousel-caption">Sakura blossom</div>
+        </div>
+
+        <div class="carousel-item">
+          <a href="https://500px.com/photo/241848813/butterfly-by-moo-foo">
+            <img src="https://drscdn.500px.org/photo/241848813/m%3D900/v2?user_id=19167395&webp=true&sig=f61f42bd884f7ce3fad2afe79ac103c25253e17ca914f5494548269fc0033eb7">
+          </a>
+
+          <div class="carousel-caption">Butterfly</div>
+        </div>
+
+        <div class="carousel-item">
+          <a href="https://500px.com/photo/239667129/sakura-blossom-by-moo-foo">
+            <img src="https://drscdn.500px.org/photo/239667129/m%3D900/v2?user_id=19167395&webp=true&sig=5d64ceba72795387061ed2f207d84942cf2c9f88d148f7fabb76037f5bffba24">
+          </a>
+
+          <div class="carousel-caption">Sakura blossom</div>
+        </div>
+
+        <div class="carousel-item">
+          <a href="https://500px.com/photo/248242395/owl-by-moo-foo">
+            <img src="https://drscdn.500px.org/photo/248242395/m%3D900/v2?user_id=19167395&webp=true&sig=d17d36b7f3785913ba4ae04d443f15ecaa8be0f838ba01578ea4ccd647d62721">
+          </a>
+
+          <div class="carousel-caption">Owl</div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
--->
+
+<script src="{{ '/js/about.js' | prepend:site.baseurl }}"></script>
