Updated analytics handling and implemented image gallery on about page

--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@ permalink: /about/
 
     <p>
       You can find me on <a href="https://twitter.com/shybovycha">Twitter</a>,
-      <a href="https://github.com/shybovycha">GitHub</a>, 
-      <a href="https://stackoverflow.com/users/330471/shybovycha">StackOverflow</a> and 
+      <a href="https://github.com/shybovycha">GitHub</a>,
+      <a href="https://stackoverflow.com/users/330471/shybovycha">StackOverflow</a> and
       <a href="https://www.linkedin.com/in/shybovycha/">LinkedIn</a>.
     </p>
   </div>
@@ -45,129 +45,125 @@ permalink: /about/
     <div class="carousel">
       <div class="carousel-inner">
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/kovacova.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/kovacova.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Kováčová, Slovakia</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/stockholm.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/stockholm.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Stockholm, Sweden</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/vienn.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/vienn.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Vienn, Austria</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/cabo_da_roca.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/cabo_da_roca.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Cabo da Roca, Portugal</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/oko_morskie.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/oko_morskie.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Oko Morskie, Poland</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/azure_window.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/azure_window.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Azure Window, Malta</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/gdansk.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/gdansk.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Gdańsk, Poland</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/paris.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/paris.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Paris, France</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/pisa.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/pisa.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Pisa, Italy</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/budapest.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/budapest.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Budapest, Hungary</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/troll_tunga.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/troll_tunga.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Troll Tunga, Norway</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/rome.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/rome.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Rome, Italy</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/venice.jpg'|prepend:site.baseurl}}" alt="">
-        
+          <img data-photo-src="{{'/images/photo-samples/venice.jpg'|prepend:site.baseurl}}" alt="">
+
           <div class="carousel-caption">Venice, Italy</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/gran_canaria.jpg'|prepend:site.baseurl}}" alt="">
-        
+          <img data-photo-src="{{'/images/photo-samples/gran_canaria.jpg'|prepend:site.baseurl}}" alt="">
+
           <div class="carousel-caption">Gran Canaria, Spain</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sydney.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{'/images/photo-samples/sydney.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Sydney, Australia</div>
         </div>
 
         <div class="carousel-item">
-          <a href="https://500px.com/photo/239667127/sakura-blossom-by-moo-foo">
-            <img src="https://drscdn.500px.org/photo/239667127/m%3D900/v2?user_id=19167395&webp=true&sig=8020288a9724e651dadba355482f8a8eb34c41d35427c034e6524e4afaa78275">
-          </a>
+          <img data-photo-src="{{ '/images/photo-samples/sakura-blossom.jpg'|prepend:site.baseurl }}">
 
           <div class="carousel-caption">Sakura blossom</div>
         </div>
 
         <div class="carousel-item">
-          <a href="https://500px.com/photo/241848813/butterfly-by-moo-foo">
-            <img src="https://drscdn.500px.org/photo/241848813/m%3D900/v2?user_id=19167395&webp=true&sig=f61f42bd884f7ce3fad2afe79ac103c25253e17ca914f5494548269fc0033eb7">
-          </a>
+          <img data-photo-src="{{ '/images/photo-samples/butterfly.jpg'|prepend:site.baseurl }}">
 
           <div class="carousel-caption">Butterfly</div>
         </div>
 
         <div class="carousel-item">
-          <a href="https://500px.com/photo/239667129/sakura-blossom-by-moo-foo">
-            <img src="https://drscdn.500px.org/photo/239667129/m%3D900/v2?user_id=19167395&webp=true&sig=5d64ceba72795387061ed2f207d84942cf2c9f88d148f7fabb76037f5bffba24">
-          </a>
+          <img data-photo-src="{{ '/images/photo-samples/sakura-blossom2.jpg'|prepend:site.baseurl }}">
 
           <div class="carousel-caption">Sakura blossom</div>
         </div>
 
         <div class="carousel-item">
-          <a href="https://500px.com/photo/248242395/owl-by-moo-foo">
-            <img src="https://drscdn.500px.org/photo/248242395/m%3D900/v2?user_id=19167395&webp=true&sig=d17d36b7f3785913ba4ae04d443f15ecaa8be0f838ba01578ea4ccd647d62721">
-          </a>
+          <img data-photo-src="{{ '/images/photo-samples/owl.jpg'|prepend:site.baseurl }}">
 
           <div class="carousel-caption">Owl</div>
         </div>
       </div>
     </div>
   </div>
+</div>
+
+<div class="lightbox">
+  <div class="lightbox-inner"><img src="" alt=""></div>
 </div>
 
 <script src="{{ '/js/about.js' | prepend:site.baseurl }}"></script>
