--- a/_posts/tumblr/2015-02-03-abstract-classes-vs-interfaces.html
+++ b/_posts/tumblr/2015-02-03-abstract-classes-vs-interfaces.html
@@ -78,3 +78,20 @@ public class HexadecimalNumber extends Number {
 {% endhighlight %}
 
 <p>This is how we can create an abstraction: we can add or perform any other arithmetic operations regardless on which numeric system we use!</p>
+
+<p>Wneh we declare an
+    <strong>interface</strong>, we can&rsquo;t tell how to create an object, implementing that interface. E. g., we can not define
+    even a default constructor.</p>
+
+<p>Thus, when we need to have at least one constructor of a defined signature, we must use
+    <strong>abstract classes</strong>.</p>
+
+<p>Check it out:</p>
+
+{% highlight java %} public interface IVector { public void Vector(); // something like a default constructror } public class
+Vector2d implements IVector { // THIS IS NOT A CONSTRUCTOR! @Override public void Vector() { } } {% endhighlight %}
+
+<p>and compare it to this:</p>
+
+{% highlight java %} public abstract class BaseVector { public abstract BaseVector() { } } public class Vector2d extends
+BaseVector { public Vector2d() { // now it DOES HAVE a default constructor super(); } } {% endhighlight %}
