--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@ title: About
 permalink: /about/
 ---
 
-<div class="flex-row">
+<div class="flex-row photo-container">
   <div class="flex-col">
-    <img src="{{ '/images/photo-large-compressed.jpg' | prepend:site.baseurl }}" alt="photo-large" class="photo-large">
+    <img src="{{ site.baseurl }}/images/photo-large-compressed.jpg" alt="photo-large" class="photo-large">
   </div>
 
   <div class="flex-col">
@@ -28,8 +28,9 @@ permalink: /about/
     <p>
       You can find me on <a href="https://twitter.com/shybovycha">Twitter</a>,
       <a href="https://github.com/shybovycha">GitHub</a>,
-      <a href="https://stackoverflow.com/users/330471/shybovycha">StackOverflow</a> and
-      <a href="https://www.linkedin.com/in/shybovycha/">LinkedIn</a>.
+      <a href="https://stackoverflow.com/users/330471/shybovycha">StackOverflow</a>,
+      <a href="https://www.linkedin.com/in/shybovycha/">LinkedIn</a> and
+      <a href="https://www.instagram.com/moo_foo">Instagram</a>.
     </p>
   </div>
 </div>
@@ -45,115 +46,115 @@ permalink: /about/
     <div class="carousel">
       <div class="carousel-inner">
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/kovacova.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/kovacova.jpg" alt="Kováčová, Slovakia">
 
           <div class="carousel-caption">Kováčová, Slovakia</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/stockholm.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/stockholm.jpg" alt="Stockholm, Sweden">
 
           <div class="carousel-caption">Stockholm, Sweden</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/vienn.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/vienn.jpg" alt="Vienn, Austria">
 
           <div class="carousel-caption">Vienn, Austria</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/cabo_da_roca.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/cabo_da_roca.jpg" alt="Cabo da Roca, Portugal">
 
           <div class="carousel-caption">Cabo da Roca, Portugal</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/oko_morskie.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/oko_morskie.jpg" alt="Oko Morskie, Poland">
 
           <div class="carousel-caption">Oko Morskie, Poland</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/azure_window.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/azure_window.jpg" alt="Azure Window, Malta">
 
           <div class="carousel-caption">Azure Window, Malta</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/gdansk.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/gdansk.jpg" alt="Gdańsk, Poland">
 
           <div class="carousel-caption">Gdańsk, Poland</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/paris.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/paris.jpg" alt="Paris, France">
 
           <div class="carousel-caption">Paris, France</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/pisa.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/pisa.jpg" alt="Pisa, Italy">
 
           <div class="carousel-caption">Pisa, Italy</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/budapest.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/budapest.jpg" alt="Budapest, Hungary">
 
           <div class="carousel-caption">Budapest, Hungary</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/troll_tunga.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/troll_tunga.jpg" alt="Trolltunga, Norway">
 
-          <div class="carousel-caption">Troll Tunga, Norway</div>
+          <div class="carousel-caption">Trolltunga, Norway</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/rome.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/rome.jpg" alt="Rome, Italy">
 
           <div class="carousel-caption">Rome, Italy</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/venice.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/venice.jpg" alt="Venice, Italy">
 
           <div class="carousel-caption">Venice, Italy</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/gran_canaria.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/gran_canaria.jpg" alt="Gran Canaria, Spain">
 
           <div class="carousel-caption">Gran Canaria, Spain</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{'/images/photo-samples/sydney.jpg'|prepend:site.baseurl}}" alt="">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/sydney.jpg" alt="Sydney, Australia">
 
           <div class="carousel-caption">Sydney, Australia</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ '/images/photo-samples/sakura-blossom.jpg'|prepend:site.baseurl }}">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/sakura-blossom.jpg" alt="Sakura blossom">
 
           <div class="carousel-caption">Sakura blossom</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ '/images/photo-samples/butterfly.jpg'|prepend:site.baseurl }}">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/butterfly.jpg" alt="Butterfly">
 
           <div class="carousel-caption">Butterfly</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ '/images/photo-samples/sakura-blossom2.jpg'|prepend:site.baseurl }}">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/sakura-blossom2.jpg" alt="Sakura blossom">
 
           <div class="carousel-caption">Sakura blossom</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ '/images/photo-samples/owl.jpg'|prepend:site.baseurl }}">
+          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/owl.jpg" alt="Owl">
 
           <div class="carousel-caption">Owl</div>
         </div>
