--- a/_drafts/_trashed/2015-04-19-history-is-nothing-but-a-loop.html
+++ b/_drafts/_trashed/2015-04-19-history-is-nothing-but-a-loop.html
@@ -7,9 +7,9 @@ tags:
 tumblr_url: http://shybovycha.tumblr.com/post/116811050801/history-is-nothing-but-a-loop
 ---
 
-{% highlight haskell %}
+```haskell
     newLanguage :: Language -> Language -> Language
     newLanguage = Haskell `refactorTo` Java8
     newLanguage = Haskell `refactorTo` Scala
     newLanguage = Haskell `refactorTo` CSharp
-{% endhighlight %}
+```
