--- a/_posts/tumblr/2014-04-12-what-i-always-forget-about-when-having-an.html
+++ b/_posts/tumblr/2014-04-12-what-i-always-forget-about-when-having-an.html
@@ -16,13 +16,13 @@ tumblr_url: http://shybovycha.tumblr.com/post/82491993325/what-i-always-forget-a
 
 <p>You could define one this way:</p>
 
-{% highlight ruby %}
+```ruby
 module Moo
   def initialize(x)
     @x = x
   end
 end
-{% endhighlight %}
+```
 
 <p>But when you try to call <code>Moo.new</code> you will get a <code>method missing</code> error.  When you try to run <code>Moo.initialize</code> you will get a <code>private method called</code> error.</p>
 
@@ -48,7 +48,7 @@ end
 
 <p>The reality is plain however:</p>
 
-{% highlight ruby %}
+```ruby
 irb(main):005:0> Object.superclass
 => BasicObject
 irb(main):006:0> Class.superclass
@@ -57,13 +57,13 @@ irb(main):007:0> Module.superclass
 => Object
 irb(main):008:0> BasicObject.superclass
 => nil
-{% endhighlight %}
+```
 
 <p>So, you can even draw a chain:</p>
 
-{% highlight haskell %}
+```haskell
 BasicObject => Object => Module => Class
-{% endhighlight %}
+```
 
 <h2>Some hints</h2>
 
