--- a/_posts/tumblr/2014-04-17-from-activemodel-to-activerecord.html
+++ b/_posts/tumblr/2014-04-17-from-activemodel-to-activerecord.html
@@ -11,7 +11,7 @@ tumblr_url: http://shybovycha.tumblr.com/post/82983429638/from-activemodel-to-ac
 
 <p>Sample <code>ActiveModel</code> looks like this:</p>
 
-{% highlight ruby %}
+```ruby
 class Posting
   include ActiveModel::Validations
 
@@ -40,13 +40,13 @@ class Posting
     # ...
   end
 end
-{% endhighlight %}
+```
 
 <p>First trouble is that <code>ActiveModel</code> does not provide any attribute access API. Or I did not google enough. So we need to create our own!</p>
 
 <p>Let us have an instance variable <code>@attributes</code> where we will store our model&rsquo; data. We need to define getter and setter methods for all the attributes of our model. This may be done with the <code>attr_accessor</code> method. But when user sets the value for some attribute, we should store that in our <code>@attributes</code> variable. And here is the first step to our black magic: <strong>we will override the <code>attr_accessor</code> method</strong>.</p>
 
-{% highlight ruby %}
+```ruby
 module ActiveAttributes
   def attr_accessor(*args)
     args.each do |k|
@@ -55,7 +55,7 @@ module ActiveAttributes
     end
   end
 end
-{% endhighlight %}
+```
 
 <p>I just wrapped the code into a single module. Remember: when you include the module in a class, all the module&rsquo; methods become class methods.</p>
 
@@ -63,7 +63,7 @@ end
 
 <p>And let&rsquo;s just agree with the following convention: <strong>all our attribute names should be symbols</strong>.</p>
 
-{% highlight ruby %}
+```ruby
 class Posting
   include ActiveModel::Validations
   include ActiveAttributes
@@ -95,11 +95,11 @@ class Posting
     # ...
   end
 end
-{% endhighlight %}
+```
 
 <p>Now, we can implement our constructor. We now have all the attributes&rsquo; getters and setter and thus we can simply call them in our constructor:</p>
 
-{% highlight ruby %}
+```ruby
 class Posting
   include ActiveModel::Validations
   include ActiveAttributes
@@ -135,7 +135,7 @@ class Posting
     # ...
   end
 end
-{% endhighlight %}
+```
 
 <p>Now let&rsquo;s implement some basic model persisting. First, we should not forget about our <strong>validations</strong> and add <code>valid?</code> test to the <code>save</code> method.</p>
 
@@ -143,7 +143,7 @@ end
 
 <p>So there is an important caveat: <strong>in order to get the correct model <code>id</code>, you need to get it from database in the same transaction as the update/insert statement</strong>. The <code>mysql2</code> gem does support multiple query statements in a single transaction. But to perform such a query, you will need to set the <code>MULTI_STATEMENTS</code> flag when creating a <code>Mysql2::Connection</code> instance.</p>
 
-{% highlight ruby %}
+```ruby
 def save
   set_default_values
 
@@ -159,13 +159,13 @@ rescue
 ensure
   @connection.close
 end
-{% endhighlight %}
+```
 
 <p>Here I used the instance variable <code>@connection</code> to make it available within the <code>rescue</code> and <code>ensure</code> statements.</p>
 
 <p>Now we will use our instance variable, <code>@attributes</code> to create an SQL query:</p>
 
-{% highlight ruby %}
+```ruby
 def save
   set_default_values
 
@@ -196,13 +196,13 @@ rescue
 ensure
   @connection.close
 end
-{% endhighlight %}
+```
 
 <p>I used the <code>ActionController::Base.helpers.sanitize</code> helper method to escape the query parameters.</p>
 
 <p>Now we should simply wrap our query into a transaction and get an <code>id</code> from the database.</p>
 
-{% highlight ruby %}
+```ruby
 def save
   set_default_values
 
@@ -243,13 +243,13 @@ rescue
 ensure
   @connection.close
 end
-{% endhighlight %}
+```
 
 <p>Quite big method, sure. Yet, it performs all the <em>UPDATEs</em> and <em>INSERTs</em> for us.</p>
 
 <p>Let&rsquo;s add some attribute with the default value, <code>created_at</code> and check how the whole class works:</p>
 
-{% highlight ruby %}
+```ruby
 require 'date'
 
 # ...
@@ -263,14 +263,14 @@ protected
 def set_default_values
   @attributes[:created_at] = DateTime.now
 end
-{% endhighlight %}
+```
 
 <p>And the test:</p>
 
-{% highlight ruby %}
+```ruby
 p = Posting.new title: "Hello, ActiveModel!", body: "Hello, Database!"
 
 p.save
 
 puts p.created_at
-{% endhighlight %}
+```
